backend issue solved , removed neon db and used pg

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 DATABASE_URL=postgresql://postgres:KHarshit@197@localhost:5197/skill_x
+# DATABASE_URL=postgresql://postgres:KHarshit@197@your-db.neon.tech/skill_x?sslmode=require
+DB_USER=postgres
+DB_HOST=localhost
+DB_NAME=skill_x
+DB_PASSWORD=KHarshit@197
+DB_PORT=5197
