--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-DATABASE_URL=postgresql://postgres:KHarshit@197@localhost:5197/skill_x
-# DATABASE_URL=postgresql://postgres:KHarshit@197@your-db.neon.tech/skill_x?sslmode=require
-DB_USER=postgres
-DB_HOST=localhost
-DB_NAME=skill_x
-DB_PASSWORD=KHarshit@197
-DB_PORT=5197
+# DATABASE_URL=postgresql://postgres:KHarshit@197@localhost:5197/skill_x
+# DATABASE_URL=postgresql://skill_x_postgres_user:aeQLpBR044OXjzy1FnoF4nR0wm4Fb2Iw@dpg-d0i9a16mcj7s739rd090-a.oregon-postgres.render.com/skill_x_postgres 
+DATABASE_URL=postgresql://skill_x_postgres_user:aeQLpBR044OXjzy1FnoF4nR0wm4Fb2Iw@dpg-d0i9a16mcj7s739rd090-a/skill_x_postgres
+DB_USER=skill_x_postgres_user
+DB_HOST=dpg-d0i9a16mcj7s739rd090-a
+DB_NAME=skill_x_postgres
+DB_PASSWORD=aeQLpBR044OXjzy1FnoF4nR0wm4Fb2Iw
+DB_PORT=5432
