--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "cd client && npm install && npm run build && cd .. && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "cd client && npm ci && npm run build",
+    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "postinstall": "npm install --only=dev && npm install"
+    "postinstall": "echo \"Skipping postinstall to prevent infinite loop\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
